k8s/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: laravel-web
spec:
  to:
    kind: Service
    name: laravel-web
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
